style settings tab, prevent overlap with page content and nav bar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,14 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-style: normal;
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+}
+
+#root {
+  height: 100%;
+  width: 100%;
 }
 
 .site-name {
@@ -10,14 +18,15 @@ body {
   font-size: 3rem;
 }
 
-.login {
+.login, .settings-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: absolute;
+  margin-block: auto;
+  /*position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);*/
   padding: 1rem;
   border-radius: 15px;
   width: 50%;
@@ -37,7 +46,7 @@ body {
     height: 100vh;
   }
 
-  .login {
+  .login, .settings-container {
     width: 95%;
     box-shadow: none;
     border-radius: 0;
@@ -46,7 +55,7 @@ body {
   }
 }
 
-.login form {
+.login form, .settings-container form {
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -106,12 +115,14 @@ body {
 }
 
 nav {
-  position: fixed;
+  /*position: fixed;
   bottom: 0;
   left: 0;
-  right: 0;
+  right: 0; */
+  position: sticky;
+  width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   padding: 1rem;
 }
 
@@ -148,4 +159,43 @@ nav {
 
 .user-card * {
   pointer-events: none;
+}
+
+.nav-link {
+  all: unset;
+  display:flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  cursor: pointer;
+  border-radius: 10px;
+  padding: 0.5rem;
+}
+
+.nav-link:hover {
+  background-color: #dddddd;
+}
+
+.nav-link p {
+  margin: 0;
+}
+
+.nav-icon {
+  height: 1.5rem;
+}
+
+.settings-container form div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  width: 100%;
+}
+
+.settings-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  height: 100%;
+  width: 100%;
 }
